--- a/src/main/resources/templates/zone-wizard.html
+++ b/src/main/resources/templates/zone-wizard.html
@@ -354,8 +354,8 @@
         }
 
         function saveZone() {
-            // For now, just show alert - will be replaced with actual save functionality
-            alert('Zapisywanie strefy będzie dostępne w następnej fazie rozwoju!');
+            // For now, redirect to success screen - will be replaced with actual save functionality
+            window.location.href = '/zones/success?zoneId=1';
         }
 
         function validateCurrentStep() {
