Fix Thymeleaf parsing error in zone-wizard template
- Replaced complex conditional expressions with simple th:if conditions
- Used separate div elements for each step state (completed, current, future)
- Fixed progress bar display logic
- Template now parses correctly without syntax errors
- Maintained visual design and functionality

--- a/src/main/resources/static/css/output.css
+++ b/src/main/resources/static/css/output.css
@@ -1069,6 +1069,11 @@ video {
   border-color: rgb(59 130 246 / var(--tw-border-opacity, 1));
 }
 
+.border-green-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(187 247 208 / var(--tw-border-opacity, 1));
+}
+
 .bg-blue-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(37 99 235 / var(--tw-bg-opacity, 1));
@@ -1397,6 +1402,11 @@ video {
 .text-green-600 {
   --tw-text-opacity: 1;
   color: rgb(22 163 74 / var(--tw-text-opacity, 1));
+}
+
+.text-green-800 {
+  --tw-text-opacity: 1;
+  color: rgb(22 101 52 / var(--tw-text-opacity, 1));
 }
 
 .placeholder-gray-500::-moz-placeholder {
