Add debugging to zones.html JavaScript
🔧 Debug Changes:
- Added console.log to check if zones script is loaded
- Added console.log to startZoneWizard function
- This will help identify if script is loading or if function is called

🎯 Purpose:
- Debug ReferenceError: startZoneWizard is not defined
- Check if JavaScript is executing properly
- Identify script loading issues

--- a/src/main/resources/templates/zones.html
+++ b/src/main/resources/templates/zones.html
@@ -186,8 +186,11 @@
 
     <!-- Scripts -->
     <script>
+        console.log('Zones script loaded');
+        
         // Start zone creation wizard
         function startZoneWizard() {
+            console.log('startZoneWizard called');
             window.location.href = '/zones/wizard?step=0';
         }
         
